objects/HR_Event_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Job_Application__r.Contact__r.FirstName+&apos; &apos;+ Job_Application__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_mobile_number__c</fullName>
        <formula>Job_Application__r.Summer_Staff_mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant mobile number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_type__c</fullName>
        <formula>IF(INCLUDES( Job_Application__r.Staff_type__c , &quot;New Application&quot;), &quot;New Application&quot;, IF(INCLUDES( Job_Application__r.Staff_type__c , &quot;Returner&quot;), &quot;Returner&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This pulls through from &quot;Staff type&quot; on the Job Application</inlineHelpText>
        <label>Applicant type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_notes__c</fullName>
        <label>Assessment notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <label>Attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attending</fullName>
                </value>
                <value>
                    <fullName>Not Attending</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Day_1__c</fullName>
        <inlineHelpText>Leaders Only</inlineHelpText>
        <label>Attended Day 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - not attended</fullName>
                </value>
                <value>
                    <fullName>Yes - attended</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Day_2__c</fullName>
        <label>Attended Day 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - not attended</fullName>
                </value>
                <value>
                    <fullName>Yes - attended</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Day_3__c</fullName>
        <label>Attended Day 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No - not attended</fullName>
                </value>
                <value>
                    <fullName>Yes - attended</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Job_Application__r.Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_attended_all_training_days__c</fullName>
        <formula>IF( ISPICKVAL(Job_Application__r.Role_to_assess_for__c , &quot;Programme Leader&quot;),
          IF(AND( ISPICKVAL(Attended_Day_1__c , &quot;Yes&quot;), ISPICKVAL(Attended_Day_2__c , &quot;Yes&quot;),ISPICKVAL(Attended_Day_3__c , &quot;Yes&quot;)), &quot;Yes&quot;, &quot;No&quot;),
          IF(AND( ISPICKVAL(Attended_Day_1__c , &quot;Yes&quot;), ISPICKVAL(Attended_Day_2__c , &quot;Yes&quot;)), &quot;Yes&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate attended all training days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_attended_training__c</fullName>
        <label>Candidate attended training?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>HR_Event__r.Cluster1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contac__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Event Attendance</relationshipLabel>
        <relationshipName>HR_Event_Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Phone__c</fullName>
        <formula>Contac__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_YP_Assessor_confirmation_email_sent__c</fullName>
        <description>Date that YP assessor confirmation email is sent</description>
        <label>Date YP Assessor confirmation email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_as_text__c</fullName>
        <formula>TEXT( HR_Event__r.Event_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date as text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_assessment_reminder_sent__c</fullName>
        <description>Date that assessment reminder is sent - 2 days before HR event</description>
        <label>Date assessment reminder sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_confirmation_sent__c</fullName>
        <inlineHelpText>This field updates everytime the email is successfully sent</inlineHelpText>
        <label>Date last confirmation email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directions__c</fullName>
        <formula>HR_Event__r.Directions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Directions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <formula>HR_Event__r.Event_end_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_time__c</fullName>
        <formula>HR_Event__r.End_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_info__c</fullName>
        <formula>HR_Event__r.Extra_info__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extra info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Job_Application__r.Contact__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Event_Date__c</fullName>
        <formula>HR_Event__r.Event_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Event_Owner_email__c</fullName>
        <description>Will need to be updated every year</description>
        <formula>IF(OR(INCLUDES(HR_Event__r.Cluster_s__c, &quot;BANT&quot; ),INCLUDES(HR_Event__r.Cluster_s__c, &quot;BCHIC&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;BHEN&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;WHR&quot;)),&quot;staffingnortheastlondon@the-challenge.org&quot;, 

IF(OR(INCLUDES(HR_Event__r.Cluster_s__c, &quot;HEAL&quot; ),INCLUDES(HR_Event__r.Cluster_s__c, &quot;HIHO&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;MRK&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;TRIW&quot;)), &quot;staffingwestlondon@the-challenge.org&quot;, 

IF(OR(INCLUDES(HR_Event__r.Cluster_s__c, &quot;BB&quot; ),INCLUDES(HR_Event__r.Cluster_s__c, &quot;Greenwich&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;CAS&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;WHR&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;ESurrey&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;SLL&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;WSurrey&quot;)), &quot;staffingsouthlondon@the-challenge.org&quot;, 


IF(OR(INCLUDES(HR_Event__r.Cluster_s__c, &quot;Lanc&quot; ),INCLUDES(HR_Event__r.Cluster_s__c, &quot;NManc&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;GEM&quot;)), &quot;staffingnorthwest@the-challenge.org&quot;, 


IF(OR(INCLUDES(HR_Event__r.Cluster_s__c, &quot;BlackCountry&quot; ),INCLUDES(HR_Event__r.Cluster_s__c, &quot;NCBirm&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;SBirm&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;CAW&quot;),INCLUDES(HR_Event__r.Cluster_s__c, &quot;SWarkS&quot;)), &quot;staffingwestmidlands@the-challenge.org&quot;,  &quot;summer2014@the-challenge.org&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates based on Cluster, which regional email address should be used</inlineHelpText>
        <label>HR Event Owner email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Event_Type2__c</fullName>
        <formula>TEXT( HR_Event__r.HR_Event_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HR Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Event__c</fullName>
        <label>HR Event</label>
        <referenceTo>HR_Event__c</referenceTo>
        <relationshipLabel>HR Event Attendance</relationshipLabel>
        <relationshipName>HR_Event_Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HR_event_Owner__c</fullName>
        <formula>HR_Event__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  HR_Event__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is based on the owner of the HR Event. Will need to be updated every autumn</inlineHelpText>
        <label>HR event Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>HR Event Attendance</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_time_email_sent__c</fullName>
        <formula>IF(Date_last_confirmation_sent__c = Today(), &quot;Email sent today&quot;, IF(Date_last_confirmation_sent__c &lt; Today(), &quot;Sent before today&quot;, &quot;Not sent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last time email sent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_list__c</fullName>
        <formula>HR_Event__r.Packing_list__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing list</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <formula>IF(AND(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Programme Leader&quot;),INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Assistant Programme Leader&quot;)),&quot;Leader roles&quot;, 
IF(AND(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Senior Mentor&quot;),INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Community Mentor&quot;),INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Support Worker&quot;)),&quot;Mentor roles&quot;, 
IF(AND(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Associate Mentor&quot;),INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Senior Associate Mentor&quot;)),&quot;Associate Mentors&quot;, 
IF(AND(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Practitioner - Drama&quot;),INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Practitioner - Enterprise&quot;), INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Practitioner - Media&quot;), INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Practitioner - Sport&quot;), INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Practitioner - Photography&quot;)),&quot;Practitioners&quot;,
IF(AND(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Logs Officer&quot;),INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Residential Accommodation Manager&quot;)),&quot;Logs officer roles&quot;,  
IF(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Project Volunteer&quot;), &quot;Project Volunteers&quot;,
IF(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;Youth Board Member&quot;), &quot;Youth Board Members&quot;,
IF(INCLUDES(HR_Event__r.Role_to_be_assessed1__c , &quot;TCS Mentor&quot;), &quot;TCS Mentors&quot;,
&quot; &quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_YP_Assessor_confirmation_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers email to be sent to YP Assessor</description>
        <label>Send YP Assessor confirmation email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_confirmation_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>triggers confirmation email to be sent</description>
        <inlineHelpText>This checkbox triggers the HR event details confirmation email to be resent. It will uncheck itself when the email has sent.</inlineHelpText>
        <label>Resend confirmation email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_time__c</fullName>
        <formula>HR_Event__r.Start_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_T_10_email_venue_change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger T-10 email (venue change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <formula>HR_Event__r.Venue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_address__c</fullName>
        <formula>HR_Event__r.Venue_address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_Hours_required__c</fullName>
        <formula>HR_Event__r.YP_hours_required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP Hours required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_end_time__c</fullName>
        <formula>HR_Event__r.YP_end_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP end time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YP_start_time__c</fullName>
        <formula>HR_Event__r.YP_start_time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YP start time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAttended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAttended</label>
        <type>Checkbox</type>
    </fields>
    <label>HR Event Attendance</label>
    <listViews>
        <fullName>AAA_Leanne</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Job_Application__c</columns>
        <columns>Applicant_mobile_number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contact_Owner_Phone__c</columns>
        <columns>Gender__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Event_Date__c</field>
            <operation>equals</operation>
            <value>8/21/2014</value>
        </filters>
        <filters>
            <field>HR_event_Owner__c</field>
            <operation>equals</operation>
            <value>Leanne Ingram,Ciara Kavanagh,Naomi Schofield</value>
        </filters>
        <label>Leanne - Pre Assessment Text</label>
    </listViews>
    <listViews>
        <fullName>A_Lei_training_confirmations_to_resend</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>BBLG,BAD WHRN</value>
        </filters>
        <filters>
            <field>HR_Event_Type2__c</field>
            <operation>contains</operation>
            <value>training</value>
        </filters>
        <label>A&apos;Lei - training confirmations to resend</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_Leigh_Training_confirmations_to_send</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Send_confirmation_email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>BBLG,BAD WHRN</value>
        </filters>
        <filters>
            <field>Send_confirmation_email__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>HR_Event_Type2__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>A&apos;Leigh - Training confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_Leighsha_assess_confirmations_to_send</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>Bad WHRN,BBLG</value>
        </filters>
        <filters>
            <field>HR_Event__c</field>
            <operation>notContain</operation>
            <value>training</value>
        </filters>
        <label>A&apos;Leighsha assess. confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Agne_Training_confirmations_to_send</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Send_confirmation_email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>Birmingham,Scaw</value>
        </filters>
        <filters>
            <field>Send_confirmation_email__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>HR_Event_Type2__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>Agne - Training confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Agne_assessment_confirmations_to_send</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>Birmingham,Scaw</value>
        </filters>
        <filters>
            <field>HR_Event__c</field>
            <operation>notContain</operation>
            <value>training</value>
        </filters>
        <label>Agne - assessment confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ali_Training_confirmations_to_send1</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Send_confirmation_email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>HEK,HRW</value>
        </filters>
        <filters>
            <field>Send_confirmation_email__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>HR_Event_Type2__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>Ali - Training confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ali_assessment_confirmations_to_send</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <columns>HR_Event_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>BBLG</value>
        </filters>
        <filters>
            <field>HR_Event__c</field>
            <operation>contains</operation>
            <value>mentor training</value>
        </filters>
        <filters>
            <field>HR_Event__c</field>
            <operation>notContain</operation>
            <value>BBLG AM training</value>
        </filters>
        <label>Alei BAD SMS leader Training Weekend</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ali_training_confirmations_to_resend</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Send_confirmation_email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HR_Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/6/2013</value>
        </filters>
        <filters>
            <field>HR_Event_Type2__c</field>
            <operation>contains</operation>
            <value>training</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>triw,mrk,heal,hiho</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>HR_Event__c</field>
            <operation>notContain</operation>
            <value>am</value>
        </filters>
        <label>West - training confirmations to resend</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ali_training_confirmations_to_send</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Send_confirmation_email__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>BETHH,CHIW</value>
        </filters>
        <filters>
            <field>Date_last_confirmation_sent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>HR_Event_Type2__c</field>
            <operation>contains</operation>
            <value>training</value>
        </filters>
        <label>Jonny - training confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Job_Application__c</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Candidate_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>HR_Event__c</field>
            <operation>equals</operation>
            <value>Warwickshire Mentor/Facilitator Assessment - 06/02/2016 - 11am - 3pm</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_assessment_confirmations_to_send</fullName>
        <columns>Cluster__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>NAME</columns>
        <columns>Job_Application__c</columns>
        <columns>HR_Event__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HR_Event_Attendance__c.HR_Event_Attendance_2012</value>
        </filters>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>All - assessment confirmations to send</label>
        <sharedTo>
            <group>Central_Comms</group>
            <group>Central_Comms_Admins</group>
            <group>Nat_Staffing_Dashboard_Recipients_2014</group>
            <group>Staffing_2013</group>
            <group>Staffing_Midlands_2013</group>
            <group>Staffing_North_West_2013</group>
            <group>Staffing_West_London_2013</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_inc_test_data</fullName>
        <columns>HR_Event__c</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Candidate_Name__c</columns>
        <columns>Applicant_mobile_number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicant_Name__c</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <label>All inc test data</label>
    </listViews>
    <listViews>
        <fullName>Allreal</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>HR_Event__c</columns>
        <columns>Job_Application__c</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <label>Allreal</label>
    </listViews>
</CustomObject>